Updated Jobs module to Spring 6/Spring Boot 3.3